# flycap

./: .gitignore  Paths_flycap.hs  README.md  flycap.cabal
buildtest/: test.cabal  test.hsc
src/System/: FlyCap.hs
src/System/FlyCap/: AVI.chs  FlyCapBase.hs  FlyCapBase.hsc  Internal.chs  test.hs
tests/: aviToAvi.hs  avitest.hs  memVid.hs  multCameras.hs  newtest.hs  test  test.hs  videoTest.hs  vidfromAVI.hs
