Name:               flycap
Version:            0.1.0
License:            BSD3
License-File:       LICENSE
Copyright:          (c) 2013-2015 Greg Hale
Author:             Greg Hale, Sarah Walker
Maintainer:         imalsogreg@gmail.com
Stability:          Experimental
Homepage:           https://github.com/ImAlsoGreg/hFlyCapture
Bug-Reports:        https://github.com/ImAlsoGreg/hFlyCapture/issues
Category:           Graphics
Build-Type:         Simple
Synopsis:           Haskell Bindings to FlyCapture2 SDK from Point Grey
Cabal-Version:      >=1.10
Extra-Source-Files: README.md
                  , tests/*.hs
Description:
  The /FlyCapture2 SDK/ provides c and c++ access to Point Grey (<http://ptgrey.com>) research-grade cameras. 
  The @System.Flycap@ package is limited a binding to the c SDK. Right now in Haskell you can:
  .
    - Get basic system info (camera count, camera manufacturer info)
  .
    - Start/stop acquisition runs
  .
    - Address cameras by index or serial number
  .
    - Set free-running/triggered operation
  .
    - Acquire frames
  .
    - Convert to JuicyPixels types

Source-Repository head
  Type:     git
  Location: git://github.com/imalsogreg:flycap.git

Library
  Build-Tools:        c2hs
  Default-Language:    Haskell2010
  Build-Depends:
      base     (>= 4 && <= 5)
    , bytestring
    , carray
    , errors
    , JuicyPixels (>=3.1 && < 4.0)
    , mtl
    , transformers
    , vector 

  extra-lib-dirs: /usr/lib
  extra-libraries: flycapture-c
  include-dirs: /usr/include/flycapture/C
  Hs-Source-Dirs: src
  Exposed-Modules:
    System.FlyCap
    System.FlyCap.Internal
    System.FlyCap.AVI
  Ghc-Options: -Wall

--Executable aviToAvi
--  Hs-Source-Dirs: tests
--  Main-Is: aviToAvi.hs
--  Build-Depends: flycap, base, CV